@@ -1,3 +1,7 @@
+Pending - build 145
+
+-- fix dns assertion; remove unused variables
+
 15/03/31 - build 144
 
 -- reworked autotools generation of api_options.h
